ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts:2:1
  |
2 | yield foo;
  | ^^^^^

error[1163]: A 'yield' expression is only allowed in a generator body.
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldExpression2_es6/input.ts:2:1
  |
2 | yield foo;
  | ^^^^^

